modif version mysql + noms
changement version mysql et noms

--- a/logicaldoc_mysql/docker-compose.yml
+++ b/logicaldoc_mysql/docker-compose.yml
@@ -8,8 +8,8 @@ volumes:
 
 services:
   
-  mysqlld:
-    image: mysql
+  mysql-ld:
+    image: mysql:5.7
     volumes:
      - database_my:/var/lib/mysql
     environment:
@@ -34,4 +34,4 @@ services:
     ports:
      - "8081"
     links:
-     - mysqlld
+     - mysql-ld
