--- a/logicaldoc_postgres/docker-compose.yml
+++ b/logicaldoc_postgres/docker-compose.yml
@@ -1,8 +1,6 @@
 version: '2'
 
 volumes:
-  database_my:
-    external: true
   database_pg:
     external: true
 
@@ -20,7 +18,6 @@ services:
     image: jwilder/nginx-proxy
     ports: 
      - "8083:8081"
-     - "8093:8080"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
@@ -28,6 +25,7 @@ services:
     image: logicaldoc
     environment:
       - DB_ENGINE=postgres
+      - DB_PORT=5432
       - DOCKER_CLIENT_TIMEOUT=120
       - COMPOSE_HTTP_TIMEOUT=120
       - VIRTUAL_HOST=logicaldoc
