modification virtual host
ajout du n° de build et du suffixe de l'URL

--- a/logicaldoc_mysql/docker-compose.yml
+++ b/logicaldoc_mysql/docker-compose.yml
@@ -26,7 +26,7 @@ services:
      - DB_ENGINE=mysql
      - DOCKER_CLIENT_TIMEOUT=120
      - COMPOSE_HTTP_TIMEOUT=120
-     - VIRTUAL_HOST=logicaldoc
+     - VIRTUAL_HOST=${env.BUILD_ID}.logicaldoc.formation.squashtest.fr
      - VIRTUAL_PORT=8081
     ports:
      - "8081"
