--- a/logicaldoc_postgres/docker-compose.yml
+++ b/logicaldoc_postgres/docker-compose.yml
@@ -26,9 +26,10 @@ services:
     environment:
       - DB_ENGINE=postgres
       - DB_PORT=5432
+      - DB_HOST=postres-ld
       - DOCKER_CLIENT_TIMEOUT=120
       - COMPOSE_HTTP_TIMEOUT=120
-      - VIRTUAL_HOST=logicaldoc
+      - VIRTUAL_HOST=${env.BUILD_ID}.logicaldoc.formation.squashtest.fr
       - VIRTUAL_PORT=8081
     ports:
       - "8081"
