--- a/logicaldoc_postgres/docker-compose.yml
+++ b/logicaldoc_postgres/docker-compose.yml
@@ -16,8 +16,10 @@ services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy
+    environment:
+      - COMPOSE_HTTP_TIMEOUT=160
     ports: 
-     - "8083:8081"
+     - "8083:8083"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
 
@@ -26,12 +28,13 @@ services:
     environment:
       - DB_ENGINE=postgres
       - DB_PORT=5432
+      - HTTP_PORT=8083
       - DB_HOST=postres-ld
       - DOCKER_CLIENT_TIMEOUT=120
-      - COMPOSE_HTTP_TIMEOUT=120
+      - COMPOSE_HTTP_TIMEOUT=160
       - VIRTUAL_HOST=logicaldoc.formation.squashtest.fr
-      - VIRTUAL_PORT=8081
+      - VIRTUAL_PORT=8083
     ports:
-      - "8081"
+      - "8083"
     links:
       - postgres-ld
