--- a/logicaldoc_postgres/docker-compose.yml
+++ b/logicaldoc_postgres/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - DB_ENGINE=postgres
       - DB_PORT=5432
       - HTTP_PORT=8080
-      - DB_HOST=postres-ld
+      - DB_HOST=postgres-ld
       - DOCKER_CLIENT_TIMEOUT=120
       - COMPOSE_HTTP_TIMEOUT=160
       - VIRTUAL_HOST=logicaldoc.formation.squashtest.fr
