--- a/logicaldoc_mysql/docker-compose.yml
+++ b/logicaldoc_mysql/docker-compose.yml
@@ -15,8 +15,11 @@ services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy
+    environment:
+      - COMPOSE_HTTP_TIMEOUT=160
+      - VIRTUAL_PORT=83
     ports: 
-     - "83:80"
+      - "83:83"
     volumes:
      - /var/run/docker.sock:/tmp/docker.sock:ro
 
