--- a/logicaldoc_nginx/docker-compose.yml
+++ b/logicaldoc_nginx/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '2'
-    
+
+networks:
+  nginx-proxy:
+    external: true
+
 services:
   
    nginx-proxy:
      image: jwilder/nginx-proxy
+     container_name: nginx-proxy
      environment:
       - COMPOSE_HTTP_TIMEOUT=160
       - VIRTUAL_PORT=83
@@ -11,4 +16,5 @@ services:
       - "83:83"
      volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
+     
       
