--- a/logicaldoc_nginx/docker-compose.yml
+++ b/logicaldoc_nginx/docker-compose.yml
@@ -14,8 +14,18 @@ services:
       - COMPOSE_HTTP_TIMEOUT=160
       - VIRTUAL_PORT=83
      ports: 
-      - "83:83"
+      - 83:83
+      - 8083:8083
      volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
      
+    clientdebian:
+     image: clientdebian
+     ports:
+      - 6080:6080
+     networks:
+      - nginx-proxy
+     environment:
+      - VIRTUAL_HOST=clientrecette.formation.squashtest.fr
+      - VIRTUAL_PORT=8080
       
