--- a/logicaldoc_nginx/docker-compose.yml
+++ b/logicaldoc_nginx/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2'
 
 networks:
-  default:
-    external:
-      name: nginx-proxy
+  nginx-proxy:
+    external: true      
 
 services:  
   nginx-proxy:
